# DevVault

./: README.md  start_devvault.sh
backend/: devvault.db  pyproject.toml
backend/app/: database.py  main.py  schemas.py
backend/app/models/: code_repository.py  user.py
backend/app/routes/: auth_routes.py  code_routes.py  crypto_routes.py  utils_routes.py
backend/app/services/authentication/: jwt_handler.py  mfa_service.py  password_auth.py
backend/app/services/authorization/: bell_lapadula.py
backend/app/services/cryptography/: hybrid_encryption.py  threshold_crypto.py
backend/app/services/encoding/: dna_encoding.py
backend/app/services/hashing/: digital_signature.py  merkle_tree.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: CodeRepos.jsx  CryptoLab.jsx  Dashboard.jsx  Login.jsx  Register.jsx
