[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.4",
    "fastapi>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.1.0",
    "pycryptodome>=3.23.0",
    "pyotp>=2.9.0",
    "pytest>=9.0.2",
    "python-decouple>=3.8",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "qrcode>=8.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
